--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.7.0
 fastapi==0.116.1
 h11==0.16.0
 idna==3.10
+motor==3.7.1
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
