--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,25 +1,33 @@
 annotated-types==0.7.0
 anyio==4.10.0
 asyncpg==0.30.0
+bcrypt==4.3.0
+cffi==2.0.0
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.7
 dnspython==2.7.0
+ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.116.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
 motor==3.7.1
+passlib==1.7.4
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 pymongo==4.14.0
 python-dotenv==1.1.1
+python-jose==3.5.0
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
-passlib==1.7.4
-passlib[bcrypt]
-python-jose[cryptography]==3.5.0
