--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,6 +13,7 @@ fastapi==0.116.1
 greenlet==3.2.4
 h11==0.16.0
 idna==3.10
+jwt==1.4.0
 motor==3.7.1
 passlib==1.7.4
 psycopg2-binary==2.9.10
@@ -20,7 +21,9 @@ pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyJWT==2.10.1
 pymongo==4.14.0
+python-decouple==3.8
 python-dotenv==1.1.1
 python-jose==3.5.0
 rsa==4.9.1
@@ -31,9 +34,3 @@ starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
-passlib==1.7.4
-passlib[bcrypt]
-python-jose[cryptography]==3.5.0
-pydantic[email]
-PyJWT
-python-decouple
