--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^6.1.0",
     "konva": "^10.0.2",
     "next": "15.3.3",
     "react": "^19.0.0",
