--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cookies-next": "^6.1.0",
     "konva": "^10.0.2",
+    "lucide-react": "^0.545.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
